versions/v2.10/modules/en/pages/installation-and-upgrade/best-practices/best-practices.adoc
= Best Practices for the {rancher-product-name} Server
:page-languages: [en, zh]
:revdate: 2025-06-04
:page-revdate: {revdate}
:community-path: reference-guides/best-practices/rancher-server/index.adoc 
:product-path: installation-and-upgrade/best-practices/best-practices.adoc
ifeval::["{build-type}" != "community"]
:xref-tips-for-running-rancher: xref:installation-and-upgrade/best-practices/tips-for-running-rancher.adoc
:xref-rancher-on-vsphere: xref:installation-and-upgrade/best-practices/rancher-on-vsphere.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-tips-for-running-rancher: xref:reference-guides/best-practices/rancher-server/tips-for-running-rancher.adoc
:xref-rancher-on-vsphere: xref:reference-guides/best-practices/rancher-server/on-premises-rancher-in-vsphere.adoc
endif::[]

This guide contains our recommendations for running the Rancher server, and is intended to be used in situations in which Rancher manages downstream Kubernetes clusters.

== Recommended Architecture and Infrastructure

Refer to this {xref-tips-for-running-rancher}[guide] for our general advice for setting up the Rancher server for a production installation.

== Deployment Strategies

This xref:installation-and-upgrade/best-practices/deployment-strategy.adoc[guide] is designed to help you choose whether a regional deployment strategy or a hub-and-spoke deployment strategy is better for a Rancher server that manages downstream Kubernetes clusters.

== Installing Rancher in a VMware vSphere Environment

This {xref-rancher-on-vsphere}[guide] outlines a reference architecture for installing Rancher in a vSphere environment, in addition to standard vSphere best practices as documented by VMware.
